--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <title>Redirigiendo…</title>
+  <!-- Redirección inmediata -->
   <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/edit?usp=sharing" />
   <script>
-    window.location.replace("https://docs.google.com/document/d/TU-ID-DEL-DOC/edit");
+    // Redirección alternativa con JavaScript
+    window.location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/edit?usp=sharing");
   </script>
 </head>
 <body>
-  <p>Redirigiendo al documento… Si no avanza, haz clic aquí:
-     <a href="https://docs.google.com/document/d/TU-ID-DEL-DOC/edit">Abrir documento</a>
+  <p>Redirigiendo a la hoja de cálculo…  
+     Si no avanza, haz clic aquí:  
+     <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/edit?usp=sharing">
+       Abrir documento
+     </a>
   </p>
 </body>
 </html>
