--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="utf-8" />
   <title>Redirigiendo…</title>
   <!-- Redirección inmediata -->
-  <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/edit?usp=sharing" />
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view" />
   <script>
     // Redirección alternativa con JavaScript
-    window.location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/edit?usp=sharing");
+    window.location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view");
   </script>
 </head>
 <body>
   <p>Redirigiendo a la hoja de cálculo…  
      Si no avanza, haz clic aquí:  
-     <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/edit?usp=sharing">
+     <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view">
        Abrir documento
      </a>
   </p>
