--- a/info-rn/index.htm
+++ b/info-rn/index.htm
@@ -15,42 +15,39 @@
                    "Segoe UI Mono", "Roboto Mono", "Courier New", monospace;
       display: grid;
       place-items: center;
-      padding: 3vh 2vw;
+      padding: 2vh 1vw;
     }
 
     .frame { width: min(1100px, 96vw); position: relative; }
 
-    /* Líneas ASCII arriba/abajo */
     .ascii-line {
       white-space: pre;
       overflow: hidden;
       color: #9e9e9e;
-      font-size: clamp(8px, 1.1vw, 14px);
+      font-size: clamp(6px, 0.9vw, 12px);
       line-height: 1;
       user-select: none;
       margin: 0;
       text-align: center;
     }
 
-    /* Panel con contenido y columnas laterales de '│' reales */
     .panel {
       position: relative;
-      padding: 2.2rem 1.6rem;
+      padding: 1.6rem 1.2rem;
       background:#000;
-      /* pequeño relleno para despegar texto de los costados */
-      padding-left: calc(1.6rem + 1ch);
-      padding-right: calc(1.6rem + 1ch);
+      padding-left: calc(1.2rem + 1ch);
+      padding-right: calc(1.2rem + 1ch);
     }
 
     .side {
       position: absolute;
       top: 0; bottom: 0;
-      width: 1ch;           /* ancho de un carácter monoespaciado */
+      width: 1ch;
       white-space: pre;
       color: #9e9e9e;
-      line-height: 1.05;    /* debe coincidir con el de <pre> para alinear bien */
+      line-height: 1.05;
       margin: 0;
-      pointer-events: none; /* que no estorbe clics */
+      pointer-events: none;
       user-select: none;
       overflow: hidden;
     }
@@ -60,53 +57,59 @@
     pre {
       white-space: pre;
       line-height: 1.05;
-      font-size: clamp(6px, 1.05vw, 15px);
+      font-size: clamp(5px, 0.85vw, 13px);
       margin: 0;
       text-align: left;
     }
+
     .radio { color: #35ff9b; margin-top: .5rem; }
     .texto {
       max-width: 820px;
-      margin: 2rem auto 2.2rem;
+      margin: 1.5rem auto 1.8rem;
       color: #ddd;
       font-family: "IBM Plex Mono", ui-monospace, monospace;
-      font-size: clamp(13px, 1.2vw, 18px);
-      line-height: 1.6;
+      font-size: clamp(11px, 1vw, 16px);
+      line-height: 1.5;
       text-align: justify;
     }
-    .banquito { margin-top: 1.2rem; color: #ff3b3b; }
+    .banquito { margin-top: 1rem; color: #ff3b3b; }
 
     .info {
-      margin-top: 2rem;
-      font-size: clamp(14px, 1.2vw, 18px);
+      margin-top: 1.5rem;
+      font-size: clamp(12px, 1vw, 16px);
       color: #aaa;
       text-align: center;
     }
+
     .actions {
-      margin-top: .8rem;
+      margin-top: .6rem;
       display: flex;
       flex-wrap: wrap;
-      gap: 12px;
+      gap: 10px;
       justify-content: center;
     }
+
     a.btn {
       text-decoration: none;
-      padding: 12px 20px;
-      border-radius: 8px;
+      padding: 10px 16px;
+      border-radius: 6px;
       font-weight: 700;
-      letter-spacing: .3px;
+      letter-spacing: .2px;
       border: none;
       color: #000;
       background: linear-gradient(180deg, #35ff9b, #12d87e);
+      font-size: clamp(12px, 1vw, 14px);
     }
+
     a.btn.secondary {
       background: linear-gradient(180deg, #333, #111);
       color: #f2f2f2;
       border: 1px solid #222;
     }
+
     .footer {
-      margin-top: 2rem;
-      font-size: 12px;
+      margin-top: 1.5rem;
+      font-size: 10px;
       color: #777;
       text-align: center;
     }
@@ -117,10 +120,10 @@
     <pre class="ascii-line">┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐</pre>
 
     <div class="panel" id="panel">
-      <!-- Laterales con '│' reales generados a la altura del panel -->
       <pre class="side left"  id="sideLeft"  aria-hidden="true"></pre>
       <pre class="side right" id="sideRight" aria-hidden="true"></pre>
 
+      <!-- === RADIO NOPAL === -->
       <pre class="radio">
 ____/\\\\\\\\\____________________________/\\\_________________________________/\\\\\_____/\\\_____________________________________________/\\\\\\____        
  __/\\\///////\\\_________________________\/\\\________________________________\/\\\\\\___\/\\\____________________________________________\////\\\____       
@@ -145,6 +148,7 @@ ____/\\\\\\\\\____________________________/\\\_________________________________/
         </p>
       </div>
 
+      <!-- === BANQUITO === -->
       <pre class="banquito">
  _______                                           __    __                                          __  __        __                      __           
 /       \                                         /  |  /  |                                        /  |/  |      /  |                    /  |          
@@ -178,14 +182,12 @@ $$$$$$$/   $$$$$$$/ $$/   $$/  $$$$$$$ | $$$$$$/  $$/    $$$$/   $$$$$$/        
   </section>
 
   <script>
-    // Genera columnas de '│' que llenan la altura del panel, manteniendo responsivo el contenido.
     (function () {
       const panel = document.getElementById('panel');
       const left  = document.getElementById('sideLeft');
       const right = document.getElementById('sideRight');
 
       function updateSides() {
-        // Calcula cuántas líneas caben según la altura y el line-height actual.
         const lineHeight = parseFloat(getComputedStyle(left).lineHeight) || 16;
         const h = panel.clientHeight;
         const lines = Math.max(1, Math.floor(h / lineHeight));
@@ -194,10 +196,8 @@ $$$$$$$/   $$$$$$$/ $$/   $$/  $$$$$$$ | $$$$$$/  $$/    $$$$/   $$$$$$/        
         right.textContent = col;
       }
 
-      // Inicial y en cambios de tamaño/contenido.
       updateSides();
       window.addEventListener('resize', updateSides);
-      // Por si las fuentes tardan en cargar o cambia el alto después.
       setTimeout(updateSides, 50);
       setTimeout(updateSides, 250);
     })();
