--- a/info-rn/index.htm
+++ b/info-rn/index.htm
@@ -8,81 +8,56 @@
   <style>
     html, body {
       margin: 0;
-      height: 100%;
+      padding: 0;
       background: #000;
       color: #f2f2f2;
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, "Cascadia Mono",
                    "Segoe UI Mono", "Roboto Mono", "Courier New", monospace;
-      display: grid;
-      place-items: center;
-      padding: 2vh 1vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      min-height: 100vh;
+      padding: 2vh 1vw 4vh;
     }
-
-    .frame { width: min(1100px, 96vw); position: relative; }
-
-    .ascii-line {
-      white-space: pre;
-      overflow: hidden;
-      color: #9e9e9e;
-      font-size: clamp(6px, 0.9vw, 12px);
-      line-height: 1;
-      user-select: none;
-      margin: 0;
-      text-align: center;
-    }
-
-    .panel {
-      position: relative;
-      padding: 1.6rem 1.2rem;
-      background:#000;
-      padding-left: calc(1.2rem + 1ch);
-      padding-right: calc(1.2rem + 1ch);
-    }
-
-    .side {
-      position: absolute;
-      top: 0; bottom: 0;
-      width: 1ch;
-      white-space: pre;
-      color: #9e9e9e;
-      line-height: 1.05;
-      margin: 0;
-      pointer-events: none;
-      user-select: none;
-      overflow: hidden;
-    }
-    .side.left  { left: 0;  text-align: left;  }
-    .side.right { right: 0; text-align: right; }
 
     pre {
       white-space: pre;
       line-height: 1.05;
-      font-size: clamp(5px, 0.85vw, 13px);
+      font-size: clamp(4px, 0.65vw, 11px);
       margin: 0;
       text-align: left;
     }
 
-    .radio { color: #35ff9b; margin-top: .5rem; }
+    .radio {
+      color: #35ff9b;
+      margin-top: 1vh;
+    }
+
     .texto {
-      max-width: 820px;
-      margin: 1.5rem auto 1.8rem;
+      max-width: 780px;
+      margin: 2vh auto 2vh;
       color: #ddd;
       font-family: "IBM Plex Mono", ui-monospace, monospace;
-      font-size: clamp(11px, 1vw, 16px);
-      line-height: 1.5;
+      font-size: clamp(10px, 0.9vw, 15px);
+      line-height: 1.45;
       text-align: justify;
     }
-    .banquito { margin-top: 1rem; color: #ff3b3b; }
+
+    .banquito {
+      color: #ff3b3b;
+      margin-top: 1.5vh;
+    }
 
     .info {
-      margin-top: 1.5rem;
-      font-size: clamp(12px, 1vw, 16px);
+      margin-top: 2vh;
+      font-size: clamp(10px, 0.9vw, 14px);
       color: #aaa;
       text-align: center;
     }
 
     .actions {
-      margin-top: .6rem;
+      margin-top: 1vh;
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
@@ -91,14 +66,14 @@
 
     a.btn {
       text-decoration: none;
-      padding: 10px 16px;
+      padding: 8px 14px;
       border-radius: 6px;
       font-weight: 700;
       letter-spacing: .2px;
       border: none;
       color: #000;
       background: linear-gradient(180deg, #35ff9b, #12d87e);
-      font-size: clamp(12px, 1vw, 14px);
+      font-size: clamp(10px, 0.9vw, 13px);
     }
 
     a.btn.secondary {
@@ -108,7 +83,7 @@
     }
 
     .footer {
-      margin-top: 1.5rem;
+      margin-top: 2vh;
       font-size: 10px;
       color: #777;
       text-align: center;
@@ -116,15 +91,8 @@
   </style>
 </head>
 <body>
-  <section class="frame" aria-label="Marco ASCII híbrido">
-    <pre class="ascii-line">┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐</pre>
 
-    <div class="panel" id="panel">
-      <pre class="side left"  id="sideLeft"  aria-hidden="true"></pre>
-      <pre class="side right" id="sideRight" aria-hidden="true"></pre>
-
-      <!-- === RADIO NOPAL === -->
-      <pre class="radio">
+  <pre class="radio">
 ____/\\\\\\\\\____________________________/\\\_________________________________/\\\\\_____/\\\_____________________________________________/\\\\\\____        
  __/\\\///////\\\_________________________\/\\\________________________________\/\\\\\\___\/\\\____________________________________________\////\\\____       
   _\/\\\_____\/\\\_________________________\/\\\___/\\\_________________________\/\\\/\\\__\/\\\_________________/\\\\\\\\\____________________\/\\\____      
@@ -134,22 +102,21 @@ ____/\\\\\\\\\____________________________/\\\_________________________________/
       _\/\\\_____\//\\\___/\\\/////\\\__\/\\\__\/\\\__\/\\\_\//\\\__/\\\____________\/\\\__\//\\\\\\_\//\\\__/\\\__\/\\\__________/\\\/////\\\_____\/\\\____  
        _\/\\\______\//\\\_\//\\\\\\\\/\\_\//\\\\\\\/\\_\/\\\__\///\\\\\/_____________\/\\\___\//\\\\\__\///\\\\\/___\/\\\_________\//\\\\\\\\/\\__/\\\\\\\\\_ 
         _\///________\///___\////////\//___\///////\//__\///_____\/////_______________\///_____\/////_____\/////_____\///___________\////////\//__\/////////__ 
-      </pre>
+  </pre>
 
-      <div class="texto">
-        <p>
-          Para Radio Nopal, la pregunta sigue sin responder:
-          ¿cómo generar redes de apoyo económico?
-          ¿Cómo generar proyectos independientes con una economía justa, solidaria y transparente?
-        </p>
-        <p>
-          Nos gustaría presentarles al <strong>Banquito Solidario</strong>, un proyecto del cual formamos parte
-          además de registrar y archivar en audio las sesiones de estudio.
-        </p>
-      </div>
+  <div class="texto">
+    <p>
+      Para Radio Nopal, la pregunta sigue sin responder:
+      ¿cómo generar redes de apoyo económico?
+      ¿Cómo generar proyectos independientes con una economía justa, solidaria y transparente?
+    </p>
+    <p>
+      Nos gustaría presentarles al <strong>Banquito Solidario</strong>, un proyecto del cual formamos parte 
+      además de registrar y archivar en audio las sesiones de estudio.
+    </p>
+  </div>
 
-      <!-- === BANQUITO === -->
-      <pre class="banquito">
+  <pre class="banquito">
  _______                                           __    __                                          __  __        __                      __           
 /       \                                         /  |  /  |                                        /  |/  |      /  |                    /  |          
 $$$$$$$  |  ______   _______    ______   __    __ $$/  _$$ |_     ______          _______   ______  $$ |$$/   ____$$ |  ______    ______  $$/   ______  
@@ -162,45 +129,21 @@ $$$$$$$/   $$$$$$$/ $$/   $$/  $$$$$$$ | $$$$$$/  $$/    $$$$/   $$$$$$/        
                                     $$ |                                                                                                                
                                     $$ |                                                                                                                
                                     $$/                                                                                                                 
-      </pre>
+  </pre>
 
-      <div class="info">Aquí más información sobre el Banquito:</div>
+  <div class="info">
+    Aquí más información sobre el Banquito:
+  </div>
 
-      <div class="actions">
-        <a class="btn" href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view" target="_blank" rel="noopener">
-          Abrir hoja del Banquito
-        </a>
-        <a class="btn secondary" href="https://radionopal.com" target="_blank" rel="noopener">
-          Volver a Radio Nopal
-        </a>
-      </div>
+  <div class="actions">
+    <a class="btn" href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view" target="_blank" rel="noopener">
+      Abrir hoja del Banquito
+    </a>
+    <a class="btn secondary" href="https://radionopal.com" target="_blank" rel="noopener">
+      Volver a Radio Nopal
+    </a>
+  </div>
 
-      <div class="footer">© Radio Nopal · Banquito Solidario</div>
-    </div>
-
-    <pre class="ascii-line">└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘</pre>
-  </section>
-
-  <script>
-    (function () {
-      const panel = document.getElementById('panel');
-      const left  = document.getElementById('sideLeft');
-      const right = document.getElementById('sideRight');
-
-      function updateSides() {
-        const lineHeight = parseFloat(getComputedStyle(left).lineHeight) || 16;
-        const h = panel.clientHeight;
-        const lines = Math.max(1, Math.floor(h / lineHeight));
-        const col = Array.from({length: lines}, () => '│').join('\n');
-        left.textContent = col;
-        right.textContent = col;
-      }
-
-      updateSides();
-      window.addEventListener('resize', updateSides);
-      setTimeout(updateSides, 50);
-      setTimeout(updateSides, 250);
-    })();
-  </script>
+  <div class="footer">© Radio Nopal · Banquito Solidario</div>
 </body>
 </html>
