--- a/info-rn/index.htm
+++ b/info-rn/index.htm
@@ -111,8 +111,8 @@ ____/\\\\\\\\\____________________________/\\\_________________________________/
       ¿Cómo generar proyectos independientes con una economía justa, solidaria y transparente?
     </p>
     <p>
-      Nos gustaría presentarles al <strong>Banquito Solidario</strong>, un proyecto del cual formamos parte 
-      además de registrar y archivar en audio las sesiones de estudio.
+      Nos gustaría presentarles al <strong>Banquito Solidario</strong>, 
+      un proyecto del cual formamos parte. 
     </p>
   </div>
 
@@ -143,7 +143,5 @@ $$$$$$$/   $$$$$$$/ $$/   $$/  $$$$$$$ | $$$$$$/  $$/    $$$$/   $$$$$$/        
       Volver a Radio Nopal
     </a>
   </div>
-
-  <div class="footer">© Radio Nopal · Banquito Solidario</div>
 </body>
 </html>
