--- a/info-rn/index.htm
+++ b/info-rn/index.htm
@@ -112,7 +112,7 @@ ____/\\\\\\\\\____________________________/\\\_________________________________/
     </p>
     <p>
       Nos gustaría presentarles al <strong>Banquito Solidario</strong>, 
-      un proyecto del cual formamos parte. 
+      un proyecto aliado con el que compartimos esta conversación. 
     </p>
   </div>
 
