--- a/info-rn/index.htm
+++ b/info-rn/index.htm
@@ -6,11 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="dark light" />
   <style>
+    :root {
+      --fg: #f2f2f2;
+      --bg: #000;
+    }
     html, body {
       margin: 0;
       padding: 0;
-      background: #000;
-      color: #f2f2f2;
+      background: var(--bg);
+      color: var(--fg);
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, "Cascadia Mono",
                    "Segoe UI Mono", "Roboto Mono", "Courier New", monospace;
       display: flex;
@@ -21,41 +25,31 @@
       padding: 2vh 1vw 4vh;
     }
 
+    /* Ajustes de tamaño compactos para que quepan los ASCII */
     pre {
       white-space: pre;
       line-height: 1.05;
-      font-size: clamp(4px, 0.65vw, 11px);
+      font-size: clamp(4px, 0.60vw, 10px); /* más pequeño aún */
       margin: 0;
       text-align: left;
     }
 
-    .radio {
-      color: #35ff9b;
-      margin-top: 1vh;
-    }
-
+    .graffiti { margin-top: 1vh; }
     .texto {
-      max-width: 780px;
+      max-width: 880px;
       margin: 2vh auto 2vh;
-      color: #ddd;
+      color: #d7d7d7;
       font-family: "IBM Plex Mono", ui-monospace, monospace;
       font-size: clamp(10px, 0.9vw, 15px);
       line-height: 1.45;
       text-align: justify;
     }
-
-    .banquito {
-      color: #ff3b3b;
-      margin-top: 1.5vh;
-    }
-
     .info {
       margin-top: 2vh;
       font-size: clamp(10px, 0.9vw, 14px);
       color: #aaa;
       text-align: center;
     }
-
     .actions {
       margin-top: 1vh;
       display: flex;
@@ -63,7 +57,6 @@
       gap: 10px;
       justify-content: center;
     }
-
     a.btn {
       text-decoration: none;
       padding: 8px 14px;
@@ -74,14 +67,14 @@
       color: #000;
       background: linear-gradient(180deg, #35ff9b, #12d87e);
       font-size: clamp(10px, 0.9vw, 13px);
+      transition: transform .15s ease, opacity .15s ease;
     }
-
+    a.btn:hover { transform: translateY(-1px); opacity: .95; }
     a.btn.secondary {
       background: linear-gradient(180deg, #333, #111);
       color: #f2f2f2;
       border: 1px solid #222;
     }
-
     .footer {
       margin-top: 2vh;
       font-size: 10px;
@@ -92,16 +85,19 @@
 </head>
 <body>
 
-  <pre class="radio">
-____/\\\\\\\\\____________________________/\\\_________________________________/\\\\\_____/\\\_____________________________________________/\\\\\\____        
- __/\\\///////\\\_________________________\/\\\________________________________\/\\\\\\___\/\\\____________________________________________\////\\\____       
-  _\/\\\_____\/\\\_________________________\/\\\___/\\\_________________________\/\\\/\\\__\/\\\_________________/\\\\\\\\\____________________\/\\\____      
-   _\/\\\\\\\\\\\/_____/\\\\\\\\\___________\/\\\__\///______/\\\\\______________\/\\\//\\\_\/\\\_____/\\\\\_____/\\\/////\\\__/\\\\\\\\\_______\/\\\____     
-    _\/\\\//////\\\____\////////\\\_____/\\\\\\\\\___/\\\___/\\\///\\\____________\/\\\\//\\\\/\\\___/\\\///\\\__\/\\\\\\\\\\__\////////\\\______\/\\\____    
-     _\/\\\____\//\\\_____/\\\\\\\\\\___/\\\////\\\__\/\\\__/\\\__\//\\\___________\/\\\_\//\\\/\\\__/\\\__\//\\\_\/\\\//////_____/\\\\\\\\\\_____\/\\\____   
-      _\/\\\_____\//\\\___/\\\/////\\\__\/\\\__\/\\\__\/\\\_\//\\\__/\\\____________\/\\\__\//\\\\\\_\//\\\__/\\\__\/\\\__________/\\\/////\\\_____\/\\\____  
-       _\/\\\______\//\\\_\//\\\\\\\\/\\_\//\\\\\\\/\\_\/\\\__\///\\\\\/_____________\/\\\___\//\\\\\__\///\\\\\/___\/\\\_________\//\\\\\\\\/\\__/\\\\\\\\\_ 
-        _\///________\///___\////////\//___\///////\//__\///_____\/////_______________\///_____\/////_____\/////_____\///___________\////////\//__\/////////__ 
+  <!-- GRAFFITI 1 (nuevo) -->
+  <pre class="graffiti" id="g1">
+      ___           ___           ___                       ___                    ___           ___           ___           ___           ___ 
+     /\  \         /\  \         /\  \          ___        /\  \                  /\__\         /\  \         /\  \         /\  \         /\__\
+    /::\  \       /::\  \       /::\  \        /\  \      /::\  \                /::|  |       /::\  \       /::\  \       /::\  \       /:/  /
+   /:/\:\  \     /:/\:\  \     /:/\:\  \       \:\  \    /:/\:\  \              /:|:|  |      /:/\:\  \     /:/\:\  \     /:/\:\  \     /:/  / 
+  /::\~\:\  \   /::\~\:\  \   /:/  \:\__\      /::\__\  /:/  \:\  \            /:/|:|  |__   /:/  \:\  \   /::\~\:\  \   /::\~\:\  \   /:/  /  
+ /:/\:\ \:\__\ /:/\:\ \:\__\ /:/__/ \:|__|  __/:/\/__/ /:/__/ \:\__\          /:/ |:| /\__\ /:/__/ \:\__\ /:/\:\ \:\__\ /:/\:\ \:\__\ /:/__/   
+ \/_|::\/:/  / \/__\:\/:/  / \:\  \ /:/  / /\/:/  /    \:\  \ /:/  /          \/__|:|/:/  / \:\  \ /:/  / \/__\:\/:/  / \/__\:\/:/  / \:\  \   
+    |:|::/  /       \::/  /   \:\  /:/  /  \::/__/      \:\  /:/  /               |:/:/  /   \:\  /:/  /       \::/  /       \::/  /   \:\  \  
+    |:|\/__/        /:/  /     \:\/:/  /    \:\__\       \:\/:/  /                |::/  /     \:\/:/  /         \/__/        /:/  /     \:\  \ 
+    |:|  |         /:/  /       \::/__/      \/__/        \::/  /                 /:/  /       \::/  /                      /:/  /       \:\__\
+     \|__|         \/__/         ~~                        \/__/                  \/__/         \/__/                       \/__/         \/__/
   </pre>
 
   <div class="texto">
@@ -112,28 +108,26 @@ ____/\\\\\\\\\____________________________/\\\_________________________________/
     </p>
     <p>
       Nos gustaría presentarles al <strong>Banquito Solidario</strong>, 
-      un proyecto aliado con el que compartimos esta conversación. 
+      un proyecto aliado con el que compartimos esta conversación.
     </p>
   </div>
 
-  <pre class="banquito">
- _______                                           __    __                                          __  __        __                      __           
-/       \                                         /  |  /  |                                        /  |/  |      /  |                    /  |          
-$$$$$$$  |  ______   _______    ______   __    __ $$/  _$$ |_     ______          _______   ______  $$ |$$/   ____$$ |  ______    ______  $$/   ______  
-$$ |__$$ | /      \ /       \  /      \ /  |  /  |/  |/ $$   |   /      \        /       | /      \ $$ |/  | /    $$ | /      \  /      \ /  | /      \ 
-$$    $$<  $$$$$$  |$$$$$$$  |/$$$$$$  |$$ |  $$ |$$ |$$$$$$/   /$$$$$$  |      /$$$$$$$/ /$$$$$$  |$$ |$$ |/$$$$$$$ | $$$$$$  |/$$$$$$  |$$ |/$$$$$$  |
-$$$$$$$  | /    $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ | __ $$ |  $$ |      $$      \ $$ |  $$ |$$ |$$ |$$ |  $$ | /    $$ |$$ |  $$/ $$ |$$ |  $$ |
-$$ |__$$ |/$$$$$$$ |$$ |  $$ |$$ \__$$ |$$ \__$$ |$$ |  $$ |/  |$$ \__$$ |       $$$$$$  |$$ \__$$ |$$ |$$ |$$ \__$$ |/$$$$$$$ |$$ |      $$ |$$ \__$$ |
-$$    $$/ $$    $$ |$$ |  $$ |$$    $$ |$$    $$/ $$ |  $$  $$/ $$    $$/       /     $$/ $$    $$/ $$ |$$ |$$    $$ |$$    $$ |$$ |      $$ |$$    $$/ 
-$$$$$$$/   $$$$$$$/ $$/   $$/  $$$$$$$ | $$$$$$/  $$/    $$$$/   $$$$$$/        $$$$$$$/   $$$$$$/  $$/ $$/  $$$$$$$/  $$$$$$$/ $$/       $$/  $$$$$$/  
-                                    $$ |                                                                                                                
-                                    $$ |                                                                                                                
-                                    $$/                                                                                                                 
+  <!-- GRAFFITI 2 (nuevo) -->
+  <pre class="graffiti" id="g2">
+ ______     ______     __   __     ______     __  __     __     ______   ______           
+/\  == \   /\  __ \   /\ "-.\ \   /\  __ \   /\ \/\ \   /\ \   /\__  _\ /\  __ \          
+\ \  __<   \ \  __ \  \ \ \-.  \  \ \ \/\_\  \ \ \_\ \  \ \ \  \/_/\ \/ \ \ \/\ \         
+ \ \_____\  \ \_\ \_\  \ \_\\"\_\  \ \___\_\  \ \_____\  \ \_\    \ \_\  \ \_____\        
+  \/_____/   \/_/\/_/   \/_/ \/_/   \/___/_/   \/_____/   \/_/     \/_/   \/_____/        
+                                                                                          
+ ______     ______     __         __     _____     ______     ______     __     ______    
+/\  ___\   /\  __ \   /\ \       /\ \   /\  __-.  /\  __ \   /\  == \   /\ \   /\  __ \   
+\ \___  \  \ \ \/\ \  \ \ \____  \ \ \  \ \ \/\ \ \ \  __ \  \ \  __<   \ \ \  \ \ \/\ \  
+ \/\_____\  \ \_____\  \ \_____\  \ \_\  \ \____-  \ \_\ \_\  \ \_\ \_\  \ \_\  \ \_____\ 
+  \/_____/   \/_____/   \/_____/   \/_/   \/____/   \/_/\/_/   \/_/ /_/   \/_/   \/_____/ 
   </pre>
 
-  <div class="info">
-    Aquí más información sobre el Banquito:
-  </div>
+  <div class="info">Aquí más información sobre el Banquito:</div>
 
   <div class="actions">
     <a class="btn" href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view" target="_blank" rel="noopener">
@@ -143,5 +137,26 @@ $$$$$$$/   $$$$$$$/ $$/   $$/  $$$$$$$ | $$$$$$/  $$/    $$$$/   $$$$$$/        
       Volver a Radio Nopal
     </a>
   </div>
+
+  <div class="footer">© Radio Nopal · Banquito Solidario</div>
+
+  <script>
+    // Colores aleatorios para los grafitis (cambian en cada carga)
+    (function () {
+      const palette = [
+        '#35ff9b', '#ff3b3b', '#7aa2ff', '#ffd166', '#ff73fa',
+        '#00e5ff', '#c3f73a', '#ffa8a8', '#b892ff', '#9efff3'
+      ];
+      function pickDistinctColors() {
+        const p = palette.slice();
+        const c1 = p.splice(Math.floor(Math.random()*p.length), 1)[0];
+        const c2 = p.splice(Math.floor(Math.random()*p.length), 1)[0];
+        return [c1, c2];
+      }
+      const [c1, c2] = pickDistinctColors();
+      document.getElementById('g1').style.color = c1;
+      document.getElementById('g2').style.color = c2;
+    })();
+  </script>
 </body>
 </html>
