--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
     (function () {
       var host = (location.hostname || "").toLowerCase();
 
-      if (host === "banquitosolidario.radionopal.com") {
-        // Subdominio → página de información
+      // Si viene del subdominio personalizado (con o sin "www")
+      if (host.includes("banquitosolidario.radionopal.com")) {
         location.replace("/info-rn/");
-      } else {
-        // GitHub Pages directo → Google Sheet
-        location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view");
+      } 
+      // Si viene de GitHub Pages
+      else if (host.includes("banquitosolidario.github.io")) {
+        location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0");
+      } 
+      // Cualquier otro dominio (por ejemplo, local)
+      else {
+        location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0");
       }
     })();
   </script>
 </head>
 <body style="font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif">
-  <p>
-    Redirigiendo…<br>
-    Si no avanza:
-  </p>
+  <p>Redirigiendo…</p>
   <ul>
     <li>
       <strong>Subdominio</strong> 
@@ -30,12 +32,18 @@
     </li>
     <li>
       <strong>GitHub Pages</strong> 
-      <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view">abrir hoja</a>
+      <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0">abrir hoja</a>
     </li>
   </ul>
   <noscript>
     <p>
-      Tu navegador no tiene JavaScript activo. Entra a
-      <a href="/info-rn/">/info-rn</a> (subdominio)
-      o a la
-      <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbc
+      Si tu navegador no tiene JavaScript, entra manualmente:<br>
+      <a href="/info-rn/">/info-rn</a> (subdominio)<br>
+      o<br>
+      <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0">
+        hoja del Banquito
+      </a>
+    </p>
+  </noscript>
+</body>
+</html>
