--- a/index.html
+++ b/index.html
@@ -2,48 +2,37 @@
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <title>Redirigiendo…</title>
+  <title>Banquito Solidario · Redirigiendo...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script>
-    (function () {
-      var host = (location.hostname || "").toLowerCase();
 
-      // Si viene del subdominio personalizado (con o sin "www")
-      if (host.includes("banquitosolidario.radionopal.com")) {
-        location.replace("/info-rn/");
-      } 
-      // Si viene de GitHub Pages
-      else if (host.includes("banquitosolidario.github.io")) {
-        location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0");
-      } 
-      // Cualquier otro dominio (por ejemplo, local)
-      else {
-        location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0");
-      }
-    })();
+  <!-- Redirección inmediata (HTML + JS por redundancia) -->
+  <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0" />
+  <script>
+    window.location.replace("https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0");
   </script>
+
+  <style>
+    html, body {
+      margin: 0; padding: 0;
+      height: 100vh;
+      display: flex; align-items: center; justify-content: center;
+      background: #000; color: #fff;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      text-align: center;
+    }
+    a {
+      color: #35ff9b;
+      text-decoration: none;
+    }
+  </style>
 </head>
-<body style="font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif">
-  <p>Redirigiendo…</p>
-  <ul>
-    <li>
-      <strong>Subdominio</strong> 
-      <a href="/info-rn/">abrir /info-rn</a>
-    </li>
-    <li>
-      <strong>GitHub Pages</strong> 
-      <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0">abrir hoja</a>
-    </li>
-  </ul>
-  <noscript>
-    <p>
-      Si tu navegador no tiene JavaScript, entra manualmente:<br>
-      <a href="/info-rn/">/info-rn</a> (subdominio)<br>
-      o<br>
-      <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0">
-        hoja del Banquito
-      </a>
-    </p>
-  </noscript>
+<body>
+  <p>
+    Redirigiendo al <strong>Banquito Solidario</strong>...<br>
+    Si no avanza, haz clic aquí:<br><br>
+    <a href="https://docs.google.com/spreadsheets/d/14mZos8uujYuG3CoOvuv9x_Tpdfng_2ESiDWbcU1w_Ko/view?gid=0#gid=0">
+      Abrir hoja de cálculo
+    </a>
+  </p>
 </body>
 </html>
